test/should_pass/retype_007.grg
actions retype_007 using attrib_model_001;

rule r {
	pattern {
		-e:EINT->;
	}
	modify {
		- f:EBOOL<e> ->;
	}
}
