test/should_fail/enum_003.grg
actions enum_003 using enum_model_001;

rule r {
	pattern {
		a:A -b:B-> a;
	}
	modify {
		eval {
			a.e = b.i;
		}
	}
}

